spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__associated_calls_complete.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct S {}
        impl S {
            fn meth() {}
        }

        fn main() {
            S::
            // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
Memory [Memory]	Memory
S [proj::S]	S
S() [proj::S]	S()$0
bool [bool]	bool
clock [clock]	clock
inout [inout]	inout
int [int]	int
main() [proj::main]	main()$0
proj [proj]	proj
tri [tri]	tri
uint [uint]	uint
