spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__associated_complete_calls_complete.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct S {}
        impl S {
            fn meth() {}
        }

        fn main() {
            S::me()
              // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
meth()	meth()$0
