spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__bare_completion.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {
            field_a: bool,
            field_b: int<4>,
        }
        impl NameOfStruct {
            fn method(self) {}
        }

        fn foo() -> bool {
            let s = NameOfStruct(false, 2);

            
      //    ^[1] completion
            false
        }
    
---code ⬆️ completion ⬇️ ---
Memory [Memory]	Memory
NameOfStruct [proj::NameOfStruct]	NameOfStruct
NameOfStruct(…) [proj::NameOfStruct]	NameOfStruct(${1:field_a}, ${2:field_b})$0
bool [bool]	bool
clock [clock]	clock
foo() [proj::foo]	foo()$0
inout [inout]	inout
int [int]	int
proj [proj]	proj
s	-
tri [tri]	tri
uint [uint]	uint
