spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__broken_match_statements_dont_break_subsequent2.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        enum A {
            B,
            C{x: bool},
        }

        fn main() {
            let x = ;
            match x {
                A::  =>
            }
        }

        fn func2() {
         
        // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
A [proj::A]	A
Memory [Memory]	Memory
bool [bool]	bool
clock [clock]	clock
inout [inout]	inout
int [int]	int
main() [proj::main]	main()$0
proj [proj]	proj
tri [tri]	tri
uint [uint]	uint
