spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__completion_adds_inst_correctly.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {}
        impl NameOfStruct {
            fn func(self) {}
            entity ent(self) {}
            pipeline(5) pl1(self, clk: clock) {}
            pipeline({5 + 1}) pl2(self, clk: clock) {}
        }

        fn foo() {
            NameOfStruct().
                        // ^[1] completion

        }
    
---code ⬆️ completion ⬇️ ---
pl2(…)	inst(${1}) pl2(${2})$0
ent()	inst ent()$0
func()	func()$0
pl1(…)	inst(5) pl1(${1})$0
