spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__completion_after_dot.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + & result"
---
  struct NameOfStruct {
      field_a: bool,
      field_b: int<4>,
  }
  impl NameOfStruct {
      fn method(self) {}
  }

  fn foo() -> bool {
      let s = NameOfStruct(false, 2);

      ;
//    ^[1] completion
      false
  }

---code ⬆️ completion ⬇️ ---
Self (proj::Self)
NameOfStruct (proj::NameOfStruct)
proj (proj)
